--- a/.env.example
+++ b/.env.example
@@ -1,6 +1,6 @@
-APP_NAME=Laravel
+APP_NAME="admin annuaires togo"
 APP_ENV=local
-APP_KEY=
+APP_KEY=base64:Ls1fxD57udXiwOd1lNfJdPJokknAjO04cRzF1/fIQT0=
 APP_DEBUG=true
 APP_URL=http://localhost
 
@@ -11,7 +11,7 @@ LOG_LEVEL=debug
 DB_CONNECTION=mysql
 DB_HOST=127.0.0.1
 DB_PORT=3306
-DB_DATABASE=laravel
+DB_DATABASE=annuairestogo
 DB_USERNAME=root
 DB_PASSWORD=
 
@@ -21,6 +21,32 @@ FILESYSTEM_DRIVER=local
 QUEUE_CONNECTION=sync
 SESSION_DRIVER=file
 SESSION_LIFETIME=120
+
+FTP_HOST=ftp.showroomafrica.com
+FTP_USERNAME=annuairestogo@annuairestogo.com
+FTP_PASSWORD="hJ}sgr8OT])C"
+FTP_PORT=21
+FTP_ROOT='public/assets/images/popup'
+FTP_ROOT1='public/assets/images/banners'
+FTP_ROOT2='public/assets/images/entreprises/logos'
+FTP_ROOT3='public/assets/images/entreprises/logo_recherches'
+FTP_ROOT4='public/assets/images/entreprises/image_relatives'
+FTP_ROOT5='public/assets/images/entreprises/pharmacies'        
+FTP_ROOT6='public/assets/images/entreprises/couvertures'
+FTP_ROOT7='public/assets/images/entreprises/selections'
+FTP_ROOT8='public/assets/images/partenaires'
+FTP_ROOT9='public/assets/images/annonces'
+FTP_ROOT10='public/assets/images/pubs'
+FTP_ROOT11='public/assets/videos/posters'
+FTP_ROOT12='public/assets/videos'
+FTP_ROOT13='public/assets/images/temoignages'
+FTP_ROOT14='public/assets/images/entreprises/services'
+FTP_ROOT15='public/assets/images/entreprises/galerie'
+FTP_ROOT16='public/assets/images/blogs'
+FTP_ROOT17='public/assets/images/sliders'
+FTP_ROOT18='public/assets/images/sliders/slider_lateral_hauts'
+FTP_ROOT19='public/assets/images/annuairestogo_logo'
+
 
 MEMCACHED_HOST=127.0.0.1
 
