--- a/.env.example
+++ b/.env.example
@@ -1,8 +1,8 @@
 APP_NAME="admin annuaires togo"
-APP_ENV=local
+APP_ENV=production
 APP_KEY=base64:Ls1fxD57udXiwOd1lNfJdPJokknAjO04cRzF1/fIQT0=
 APP_DEBUG=true
-APP_URL=http://localhost
+APP_URL=https://admin2.annuairestogo.com/login
 
 LOG_CHANNEL=stack
 LOG_DEPRECATIONS_CHANNEL=null
@@ -31,7 +31,7 @@ FTP_ROOT1='public/assets/images/banners'
 FTP_ROOT2='public/assets/images/entreprises/logos'
 FTP_ROOT3='public/assets/images/entreprises/logo_recherches'
 FTP_ROOT4='public/assets/images/entreprises/image_relatives'
-FTP_ROOT5='public/assets/images/entreprises/pharmacies'        
+FTP_ROOT5='public/assets/images/entreprises/pharmacies'
 FTP_ROOT6='public/assets/images/entreprises/couvertures'
 FTP_ROOT7='public/assets/images/entreprises/selections'
 FTP_ROOT8='public/assets/images/partenaires'
